# zazu

./: README.md  main.py  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-06-19-flight-telemetry.md  2026-06-19-tello-toddler-watcher.md
docs/superpowers/specs/: 2026-06-19-flight-telemetry-design.md  2026-06-19-tello-toddler-watcher-design.md
py/: main.py
py/tello_watch/: analyze.py  control.py  flight.py  run.py  safety.py  statemachine.py  target.py  telemetry.py  vision.py
rb/: Gemfile
tests/: test_analyze.py  test_control.py  test_flight.py  test_safety.py  test_statemachine.py  test_target.py  test_telemetry.py  test_vision.py
