[project]
name = "tello-watch"
version = "0.1.0"
description = "Stationary Tello watcher that yaws to keep a toddler centered in frame"
requires-python = ">=3.11"
dependencies = [
    "djitellopy>=2.5.0",
    "opencv-python>=4.9.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
tello-watch = "tello_watch.run:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
